--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 <li><strong>A pluggable architecture.</strong> Flame conveniently includes many built-in transforms and analyses, but sometimes these generic algorithms don't quite cover your use case exactly. In that case, you can easily implement your own transform or analysis.</li>
 <li><strong>A CIL front-end and back-end.</strong> Flame can translate CIL to Flame IR and vice-versa, allowing you to easily read and/or write CIL while operating at the optimization and analysis–focused abstraction layer afforded by Flame IR.</li>
 </ul>
+<p>For an introduction to Flame's main concepts see <a href="https://jonathanvdc.github.io/Flame/articles/intro.html">A brief introduction to Flame</a>.</p>
 <h2 id="subprojects">Subprojects</h2>
 <p>At its core, Flame is a set of libraries designed to support tools that read, analyze, optimize and write managed languages. Additionally, Flame includes a number of projects that use Flame in a fairly straightforward way.</p>
 <h3 id="ilopt"><code>ilopt</code></h3>
